--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles/styles.css" />
-    <title>КП</title>
+    <title>Коммерческое предложение</title>
   </head>
   <body>
-    <header>header</header>
+    <header class="wrapper">
+      <div class="header__container">
+        <div class="logo">VAC</div>
+        <ul>
+          <li>Описание</li>
+          <li>Галерея</li>
+          <li>Производительность</li>
+          <li>Отзывы</li>
+        </ul>
+
+        <div class="header-burger">---</div>
+      </div>
+    </header>
+
     <section>section</section>
     <footer>footer</footer>
   </body>
