--- a/index.html
+++ b/index.html
@@ -18,11 +18,29 @@
           <li>Отзывы</li>
         </ul>
 
-        <div class="header-burger">---</div>
+        <div class="header-burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </header>
 
-    <section>section</section>
+    <section class="hero">
+      <div class="wrapper">
+        <div>
+          <h2>ПК Predator 2000 для Кирилла</h2>
+          <p>Персональное предложение с учётом ваших задач</p>
+
+          <div class="hero__group">
+            <img src="./src/images/hero.webp" alt="компьютер" />
+            <img src="./src/images/hero1.webp" alt="компьютер" />
+            <img src="./src/images/hero2.webp" alt="компьютер" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>footer</footer>
   </body>
   <script src="./src/js/main.js"></script>
