сделан блок hero

--- a/index.html
+++ b/index.html
@@ -28,15 +28,31 @@
 
     <section class="hero">
       <div class="wrapper">
-        <div>
-          <h2>ПК Predator 2000 для Кирилла</h2>
-          <p>Персональное предложение с учётом ваших задач</p>
-
-          <div class="hero__group">
-            <img src="./src/images/hero.webp" alt="компьютер" />
-            <img src="./src/images/hero1.webp" alt="компьютер" />
-            <img src="./src/images/hero2.webp" alt="компьютер" />
+        <div class="hero__main">
+          <div class="hero__block">
+            <div class="hero__content">
+              <h2><span>ПК Predator 2000 для</span> <span>Кирилла</span></h2>
+              <p>Персональное предложение с учётом ваших задач</p>
+            </div>
+            <div class="hero__label">
+              <img src="./src/images/Flag.webp" alt="флаг" />&nbsp;<span
+                >1200+ собранных игровых ПК с 2019 года</span
+              >
+            </div>
           </div>
+          <div class="hero__group">
+            <div class="hero-item hero-item--first">
+              <img src="./src/images/hero.webp" alt="компьютер" />
+            </div>
+            <div class="hero-item hero-item--second">
+              <img src="./src/images/hero1.webp" alt="компьютер" />
+            </div>
+            <div class="hero-item--first img">
+              <img src="./src/images/hero2.webp" alt="компьютер" />
+            </div>
+          </div>
+
+          <button class="button btn-blue">Посмотреть спецификацию</button>
         </div>
       </div>
     </section>
