сделан блоки гарантии и сервиса

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </li>
             </ul>
 
-            <button>
+            <button class="select-btn">
               Посмотреть все характеристики&nbsp;
               <svg
                 width="22"
@@ -518,9 +518,103 @@
       </div>
     </section>
 
+    <section class="efficiency">
+      <div class="wrapper">
+        <div class="label label-color-black">
+          <div class="label-dot"></div>
+          <span>Производительность в <span>популярных</span> играх</span>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="efficiency__select">
+          <div class="select-btn custom-multiselect">
+            <div class="select-selected placeholder">FullHD разрешение</div>
+
+            <div class="select-items">
+              <div data-value="FullHD">FullHD разрешение</div>
+              <div data-value="2k">2K</div>
+              <div data-value="4k">4K</div>
+            </div>
+          </div>
+
+          <div class="select-btn custom-multiselect">
+            <div class="select-selected placeholder">Стандартные настройки</div>
+
+            <div class="select-items">
+              <div data-value="standart">Стандартные настройки</div>
+              <div data-value="nostandart">не стандартные</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="game-container">
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="./src/images/gta.webp" alt="gta" />
+            <div class="game-content">
+              <h3>Cyberpunk 2077</h3>
+              <div>950 FPS</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="upgrade"></section>
+
     <footer>footer</footer>
   </body>
   <script src="./src/js/main.js"></script>
+  <script src="./src/js/select.js"></script>
   <script src="./src/js/swiper-bundle.min.js"></script>
 
   <script>
