сделан блоки апгрейд и гарантия

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
     <section class="warranty">
       <div class="wrapper">
-        <div class="warranty__block">
+        <div class="warranty__block section-wrap">
           <h3>Фирменная гарантия</h3>
           <p>
             Гарантия VAC включена в покупку каждого компьютера в нашем магазине
@@ -609,7 +609,183 @@
       </div>
     </section>
 
-    <section class="upgrade"></section>
+    <section class="upgrade">
+      <div class="wrapper">
+        <div class="cards section-wrap">
+          <div class="card">
+            <div class="gradient-bg">
+              <div class="layer layer1"></div>
+              <div class="layer layer2"></div>
+              <div class="layer layer3"></div>
+            </div>
+
+            <div class="card-content">
+              <div class="upgrade__headline">
+                <h3>
+                  Апгрейд ПК стоимостью
+                  <span style="white-space: nowrap">24 900 руб. за 0 руб.</span>
+                  при оплате за 24 часа
+                </h3>
+                <div>19:56:38</div>
+              </div>
+
+              <div class="upgrade-container">
+                <div class="upgrade__card">
+                  <h4>
+                    Апгрейд процессора<br />
+                    Core I3 → Core I5
+                  </h4>
+                  <div>
+                    <svg
+                      viewBox="0 0 40 40"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="40.000000"
+                      height="40.000000"
+                      fill="none"
+                      customFrame="#000000"
+                    >
+                      <rect
+                        id="Solid/Status/Lightning-alt"
+                        width="40.000000"
+                        height="40.000000"
+                        x="0.000000"
+                        y="0.000000"
+                      />
+                      <path
+                        id="Icon"
+                        d="M23.0333 4.99986C23.0333 4.66578 22.8338 4.36399 22.5264 4.23312C22.2191 4.10225 21.8632 4.16761 21.6224 4.39916L18.6592 7.24845C14.2471 11.4908 10.5191 16.3911 7.60768 21.7751C7.53913 21.8961 7.5 22.036 7.5 22.1851C7.5 22.6453 7.8731 23.0184 8.33333 23.0184L15.5167 23.0184L15.5167 34.9999C15.5167 35.3299 15.7114 35.6288 16.0133 35.7621C16.3151 35.8955 16.6672 35.8381 16.9112 35.6159L18.237 34.4081C22.8782 30.1803 26.8169 25.2408 29.9054 19.7749L30.7255 18.3235C30.8713 18.0655 30.8691 17.7494 30.7197 17.4935C30.5704 17.2375 30.2963 17.0802 30 17.0802L23.0333 17.0802L23.0333 4.99986Z"
+                        fill="rgb(255,255,255)"
+                        fill-rule="nonzero"
+                      />
+                    </svg>
+
+                    <span>6 990 ₽</span>
+                  </div>
+                </div>
+
+                <div class="upgrade__card">
+                  <h4>Фирменная гарантия 3 года</h4>
+                  <div>
+                    <svg
+                      viewBox="0 0 40 40"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="40.000000"
+                      height="40.000000"
+                      fill="none"
+                      customFrame="#000000"
+                    >
+                      <rect
+                        id="Solid/Status/Lightning-alt"
+                        width="40.000000"
+                        height="40.000000"
+                        x="0.000000"
+                        y="0.000000"
+                      />
+                      <path
+                        id="Icon"
+                        d="M23.0333 4.99986C23.0333 4.66578 22.8338 4.36399 22.5264 4.23312C22.2191 4.10225 21.8632 4.16761 21.6224 4.39916L18.6592 7.24845C14.2471 11.4908 10.5191 16.3911 7.60768 21.7751C7.53913 21.8961 7.5 22.036 7.5 22.1851C7.5 22.6453 7.8731 23.0184 8.33333 23.0184L15.5167 23.0184L15.5167 34.9999C15.5167 35.3299 15.7114 35.6288 16.0133 35.7621C16.3151 35.8955 16.6672 35.8381 16.9112 35.6159L18.237 34.4081C22.8782 30.1803 26.8169 25.2408 29.9054 19.7749L30.7255 18.3235C30.8713 18.0655 30.8691 17.7494 30.7197 17.4935C30.5704 17.2375 30.2963 17.0802 30 17.0802L23.0333 17.0802L23.0333 4.99986Z"
+                        fill="rgb(255,255,255)"
+                        fill-rule="nonzero"
+                      />
+                    </svg>
+
+                    <span>3 990 ₽</span>
+                  </div>
+                </div>
+                <div class="upgrade__card">
+                  <h4>
+                    Премиальная настройка FPS Boost PRO, стресс-тест 24 часа
+                  </h4>
+                  <div>
+                    <svg
+                      viewBox="0 0 40 40"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="40.000000"
+                      height="40.000000"
+                      fill="none"
+                      customFrame="#000000"
+                    >
+                      <rect
+                        id="Solid/Status/Lightning-alt"
+                        width="40.000000"
+                        height="40.000000"
+                        x="0.000000"
+                        y="0.000000"
+                      />
+                      <path
+                        id="Icon"
+                        d="M23.0333 4.99986C23.0333 4.66578 22.8338 4.36399 22.5264 4.23312C22.2191 4.10225 21.8632 4.16761 21.6224 4.39916L18.6592 7.24845C14.2471 11.4908 10.5191 16.3911 7.60768 21.7751C7.53913 21.8961 7.5 22.036 7.5 22.1851C7.5 22.6453 7.8731 23.0184 8.33333 23.0184L15.5167 23.0184L15.5167 34.9999C15.5167 35.3299 15.7114 35.6288 16.0133 35.7621C16.3151 35.8955 16.6672 35.8381 16.9112 35.6159L18.237 34.4081C22.8782 30.1803 26.8169 25.2408 29.9054 19.7749L30.7255 18.3235C30.8713 18.0655 30.8691 17.7494 30.7197 17.4935C30.5704 17.2375 30.2963 17.0802 30 17.0802L23.0333 17.0802L23.0333 4.99986Z"
+                        fill="rgb(255,255,255)"
+                        fill-rule="nonzero"
+                      />
+                    </svg>
+
+                    <span>5 990 ₽</span>
+                  </div>
+                </div>
+                <div class="upgrade__card">
+                  <h4>Лицензионная игра на выбор</h4>
+                  <div>
+                    <svg
+                      viewBox="0 0 40 40"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      width="40.000000"
+                      height="40.000000"
+                      fill="none"
+                      customFrame="#000000"
+                    >
+                      <rect
+                        id="Solid/Status/Lightning-alt"
+                        width="40.000000"
+                        height="40.000000"
+                        x="0.000000"
+                        y="0.000000"
+                      />
+                      <path
+                        id="Icon"
+                        d="M23.0333 4.99986C23.0333 4.66578 22.8338 4.36399 22.5264 4.23312C22.2191 4.10225 21.8632 4.16761 21.6224 4.39916L18.6592 7.24845C14.2471 11.4908 10.5191 16.3911 7.60768 21.7751C7.53913 21.8961 7.5 22.036 7.5 22.1851C7.5 22.6453 7.8731 23.0184 8.33333 23.0184L15.5167 23.0184L15.5167 34.9999C15.5167 35.3299 15.7114 35.6288 16.0133 35.7621C16.3151 35.8955 16.6672 35.8381 16.9112 35.6159L18.237 34.4081C22.8782 30.1803 26.8169 25.2408 29.9054 19.7749L30.7255 18.3235C30.8713 18.0655 30.8691 17.7494 30.7197 17.4935C30.5704 17.2375 30.2963 17.0802 30 17.0802L23.0333 17.0802L23.0333 4.99986Z"
+                        fill="rgb(255,255,255)"
+                        fill-rule="nonzero"
+                      />
+                    </svg>
+
+                    <span>1 990 ₽</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-descr">
+                <p>
+                  *Внесите предоплату 20% или оформите<br />
+                  рассрочку для фиксации условий
+                </p>
+                <button class="button btn-orange">Внести предоплату</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="warranty">
+      <div class="wrapper">
+        <div class="warranty__block section-wrap">
+          <h3>Рассрочка</h3>
+          <p>Возможность покупки без переплат 0%</p>
+          <button class="btn-white">Посмотреть спецификацию</button>
+
+          <img src="./src/images/Flag.webp" alt="флаг" />
+        </div>
+      </div>
+    </section>
+
+    <section class="feedback">
+      <div class="wrapper">sdfsdf</div>
+    </section>
 
     <footer>footer</footer>
   </body>
