сделан блок отзывов

--- a/index.html
+++ b/index.html
@@ -783,8 +783,151 @@
       </div>
     </section>
 
-    <section class="feedback">
-      <div class="wrapper">sdfsdf</div>
+    <section class="feedback sectionMargin">
+      <div class="wrapper" style="position: relative">
+        <div class="label label-color-white">
+          <div class="label-dot"></div>
+          <span>Отзывы клиентов</span>
+        </div>
+        <div class="feedback-btns">
+          <div class="feedbackSlider-button-prev feedback-button"></div>
+          <div class="feedbackSlider-button-next feedback-button"></div>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="swiper feedbackSlider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="feedback-slide">
+                <div class="feedback__head">
+                  <div class="feedback__user">
+                    <img src="./src/images/avatar.webp" alt="аватар" />
+                    <div class="feedback__name">
+                      <p>Игорь Кругин</p>
+                      <span>Тюмень</span>
+                    </div>
+                  </div>
+                  <div class="feedback__date">08.05.2025</div>
+                </div>
+                <div class="feedback__img">
+                  <img src="./src/images/feedback.jpg" alt="отзыв" />
+                  <img src="./src/images/feedback.jpg" alt="отзыв" />
+                  <img src="./src/images/feedback.jpg" alt="отзыв" />
+                </div>
+                <div class="feedback">
+                  <input
+                    type="checkbox"
+                    id="feedback-toggle-1"
+                    class="feedback-toggle"
+                  />
+
+                  <div class="feedback__text">
+                    <div class="text-content">
+                      Результат превзошел все мои ожидания. Компьютер мощный,
+                      тихий и полностью соответствует моим задачам. Буду
+                      рекомендовать эту компанию всем своим знакомым! Результат
+                      превзошел все мои ожидания. Компьютер мощный, тихий и
+                      полностью соответствует моим задачам. Буду рекомендовать
+                      эту компанию всем своим знакомым!
+                    </div>
+                  </div>
+
+                  <label for="feedback-toggle-1" class="read-more-btn">
+                    <span class="expand-text">Читать полностью</span>
+                    <span class="collapse-text">Свернуть</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="feedback-slide">
+                <div class="feedback__head">
+                  <div class="feedback__user">
+                    <img src="./src/images/avatar.webp" alt="аватар" />
+                    <div class="feedback__name">
+                      <p>Игорь Кругин</p>
+                      <span>Тюмень</span>
+                    </div>
+                  </div>
+                  <div class="feedback__date">08.05.2025</div>
+                </div>
+                <div class="feedback__img">
+                  <img src="./src/images/feedback.jpg" alt="отзыв" /><img
+                    src="./src/images/feedback.jpg"
+                    alt="отзыв"
+                  /><img src="./src/images/feedback.jpg" alt="отзыв" />
+                </div>
+                <div class="feedback">
+                  <input
+                    type="checkbox"
+                    id="feedback-toggle-1"
+                    class="feedback-toggle"
+                  />
+
+                  <div class="feedback__text">
+                    <div class="text-content">
+                      Результат превзошел все мои ожидания. Компьютер мощный,
+                      тихий и полностью соответствует моим задачам. Буду
+                      рекомендовать эту компанию всем своим знакомым! Результат
+                      превзошел все мои ожидания. Компьютер мощный, тихий и
+                      полностью соответствует моим задачам. Буду рекомендовать
+                      эту компанию всем своим знакомым!
+                    </div>
+                  </div>
+
+                  <label for="feedback-toggle-1" class="read-more-btn">
+                    <span class="expand-text">Читать полностью</span>
+                    <span class="collapse-text">Свернуть</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="feedback-slide">
+                <div class="feedback__head">
+                  <div class="feedback__user">
+                    <img src="./src/images/avatar.webp" alt="аватар" />
+                    <div class="feedback__name">
+                      <p>Игорь Кругин</p>
+                      <span>Тюмень</span>
+                    </div>
+                  </div>
+                  <div class="feedback__date">08.05.2025</div>
+                </div>
+                <div class="feedback__img">
+                  <img src="./src/images/feedback.jpg" alt="отзыв" /><img
+                    src="./src/images/feedback.jpg"
+                    alt="отзыв"
+                  /><img src="./src/images/feedback.jpg" alt="отзыв" />
+                </div>
+                <div class="feedback">
+                  <input
+                    type="checkbox"
+                    id="feedback-toggle-1"
+                    class="feedback-toggle"
+                  />
+
+                  <div class="feedback__text">
+                    <div class="text-content">
+                      Результат превзошел все мои ожидания. Компьютер мощный,
+                      тихий и полностью соответствует моим задачам. Буду
+                      рекомендовать эту компанию всем своим знакомым! Результат
+                      превзошел все мои ожидания. Компьютер мощный, тихий и
+                      полностью соответствует моим задачам. Буду рекомендовать
+                      эту компанию всем своим знакомым!
+                    </div>
+                  </div>
+
+                  <label for="feedback-toggle-1" class="read-more-btn">
+                    <span class="expand-text">Читать полностью</span>
+                    <span class="collapse-text">Свернуть</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>footer</footer>
@@ -813,6 +956,34 @@
       thumbs: {
         swiper: swiper,
       },
+    });
+
+    var swiper3 = new Swiper(".feedbackSlider", {
+      slidesPerView: 1.5,
+      spaceBetween: 30,
+      watchOverflow: true,
+      navigation: {
+        nextEl: ".feedbackSlider-button-next",
+        prevEl: ".feedbackSlider-button-prev",
+      },
+      breakpoints: {
+        320: {
+          slidesPerView: 1,
+        },
+
+        900: {
+          slidesPerView: 1.5,
+        },
+      },
+    });
+
+    document.querySelectorAll(".feedback").forEach((block) => {
+      const text = block.querySelector(".feedback__text");
+      const btn = block.querySelector(".read-more-btn");
+
+      if (text.scrollHeight <= text.clientHeight + 5) {
+        btn.style.display = "none";
+      }
     });
   </script>
 </html>
