--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="wrapper">
       <div class="header__container">
-        <div class="logo">VAC</div>
+        <div class="logo" style="color: var(--primary-black)">VAC</div>
         <ul>
           <li>Описание</li>
           <li>Галерея</li>
@@ -930,7 +930,28 @@
       </div>
     </section>
 
-    <footer>footer</footer>
+    <footer class="sectionMargin">
+      <div class="wrapper footer">
+        <div class="logo" style="color: var(--white)">VAC</div>
+
+        <div class="footer__list">
+          <div class="footer__block">
+            <ul class="footer__menu">
+              <li>Описание</li>
+              <li>Галерея</li>
+              <li>Производительность</li>
+              <li>Отзывы</li>
+            </ul>
+          </div>
+          <div class="footer__block2">
+            <ul class="footer__conf">
+              <li>VAC 2025</li>
+              <li>Политика конфиденциальности</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="./src/js/main.js"></script>
   <script src="./src/js/select.js"></script>
