--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <section class="specification" id="description">
+    <section class="specification sectionMargin" id="description">
       <div class="specification__wrap">
         <div>
           <div class="wrapper">
@@ -211,7 +211,7 @@
       </div>
     </section>
 
-    <section class="service" id="galery">
+    <section class="service sectionMargin" id="galery">
       <div class="wrapper">
         <div class="label label-color-white">
           <div class="label-dot"></div>
@@ -543,7 +543,7 @@
       </div>
     </section>
 
-    <section class="efficiency" id="efficiency">
+    <section class="efficiency sectionMargin" id="efficiency">
       <div class="wrapper">
         <div class="label label-color-black">
           <div class="label-dot"></div>
